# course-projects

dev-ops/project/: .gitlab-ci.yml  README.md  setup.cfg
dev-ops/project/src/: docker-compose.yaml
dev-ops/project/src/API_GATEWAY/: Dockerfile  api_gateway.py
dev-ops/project/src/HTTPSERV/: Dockerfile  send_file_content.py
dev-ops/project/src/IMED/: Dockerfile  receive_o_emit_i.py
dev-ops/project/src/MONITORING/: Dockerfile  monitoring.py
dev-ops/project/src/OBSE/: Dockerfile  receive_all_and_store.py
dev-ops/project/src/ORIG/: Dockerfile  emit_message_o.py
dev-ops/project/tests/api_tests/: test_api.py
dev-ops/project/tests/unit_tests/: test_httpserv.py
programming-2/: README.md  mainwindow.cpp  mainwindow.hh  mainwindow.ui  resources.qrc  tetris.pro
