[metadata]
name = Project
description = DevOps course project
author = Roni Niskanen

[options]
packages =
    HTTPSERV
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    flake8>=3.9

[flake8]
max-line-length = 160